tests/invalid_programs/variable4.jas
// Invalid variable assignment.

42 = 5;
